fix: adjust alignment of presentation links for improved layout consistency

--- a/html-css/Alura/Repositorio/styles/style.css
+++ b/html-css/Alura/Repositorio/styles/style.css
@@ -70,6 +70,7 @@ body{
     flex-direction: column;
     gap: 1.8rem;
     align-items: center;
+    justify-content: space-between;
 }
 .apresentacao__links__subtitulo{
     font-family: var(--fonte-primaria);
